# bark-cpp-python

./: .gitignore  CHANGELOG.md  README.md  convert.py  download_weights.py  pyproject.toml  quantize.py  requirments.txt
.github/: dependabot.yaml
.github/workflows/: build-and-publish-test.yaml  build-and-release.yaml  build-wheels.yaml  build.yaml  publish.yaml
bark_cpp/: __init__.py  _ctypes_extensions.py  _ggml.py  bark.py  bark_cpp.py
vendor_cmakes/bark.cpp/: CMakeLists.txt
