[build-system]
requires = ["scikit-build-core[pyproject]>=0.9.2"]
build-backend = "scikit_build_core.build"

[project]
name = "bark_cpp_python"
dynamic = ["version"]
description = "Python bindings for the bark.cpp library via ctypes"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tran Minh Duc", email = "duc.t.m.47@gmail.com" },
]
dependencies = [
    "typing-extensions>=4.5.0",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.scikit-build]
wheel.packages = ["bark_cpp"]
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"
sdist.exclude = [
    "docs"
]
sdist.include = [
    "vendor/bark.cpp/*",
    "vendors_cmakes"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "bark_cpp/__init__.py"

[project.urls]
Homepage = "https://github.com/MDuc-ai/bark-cpp-python"

[tool.semantic_release]
version_variable = "bark_cpp/__init__.py:__version__"
assets = []
build_command_env = []
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
mode = "init"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false
